--- a/templates/egresos/remitos/cpb_remito_form.html
+++ b/templates/egresos/remitos/cpb_remito_form.html
@@ -10,7 +10,7 @@
 {% endblock %}
 {% block extra_js %}        
     <script src="{% static 'js/jquery.formset.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/scripts/scripts_cpb_remito.js'%}?{% now "Ymd"%}" type="text/javascript"></script>
+    <script src="{% static 'js/scripts/scripts_cpb_remitoc.js'%}?{% now "Ymd"%}" type="text/javascript"></script>
     {% block modales_js %} 
     {% endblock %}
 
@@ -25,31 +25,43 @@
 	          <div class="portlet box toolbar_blue panel_centrado">
                 <div class="portlet-title">
                     <div class="caption bold uppercase">
-                                <i class="fa fa-cubes"></i>{% if object %}{{object.cpb_tipo}} {{object}}{% else %}Nuevo Remito{%endif%}
+                                <i class="fa fa-cubes"></i>{% if object %}{{object.cpb_tipo}} {{object}}{% else %}Nuevo Remito COMPRA{%endif%}
                     </div>
                 </div>             
               	<div class="portlet-body">
 		             <div class="col-xs-12" > 
 		             <form role="form" class="form form-horizontal cpb" method="POST" action="" id="form-alta">
 					     {% csrf_token %}                 
-					     {{ form.non_field_errors }}
-					     
+					     {{ form.non_field_errors }}					     
 					     {{ form.non_form_errors  }}
 					   
 					       	<div class="row">
-   								<div class="col-sm-7">
-	   								<div class="row">
-										<label class="control-label col-sm-3">Cliente:</label>
-										<div class="col-sm-9 col-xs-12">{% bootstrap_field form.entidad show_label=False  %}</div>										
-									</div>								 								  								  
+   								<div class="col-sm-7 col-xs-12">
+   								  <div class="row">
+										<label class="control-label col-sm-2 col-xs-3">Proveedor:</label>
+										<div class="col-sm-9 col-xs-9">
+											{% bootstrap_field form.entidad show_label=False  %}												
+										</div>						
+										<div class="col-sm-1 col-xs-1 hidden-xs">
+						                  <a id="recargarProveedores" href="#" class="recargarDatos" type="button" data-toggle="tooltip" data-placement="top" title="Recargar Proveedores">
+											<i class="fa fa-refresh"></i></a>
+						                </div>      										
+								  </div>								  								  
+								</div>
+								<div class="col-sm-5 col-xs-12">
 									<div class="row">
-								        <label class="control-label col-sm-3" for="id_fecha_cpb">Fecha CPB:</label>
-								        <div class="col-sm-3">	{% bootstrap_field form.fecha_cpb show_label=False %}</div>							      
-								     					        
-								        <label class="control-label col-sm-3">Pto.Venta:</label>	
-										<div class="col-xs-3">{% bootstrap_field form.pto_vta show_label=False %}</div>
-										<div class="col-md-1 col-sm-2">{% bootstrap_field form.letra show_label=False %}</div>									
-									 </div>										
+								       <label class="control-label col-sm-3 col-xs-3" for="id_fecha_cpb">Fecha:</label>
+								       <div class="col-sm-4 col-xs-9">	{% bootstrap_field form.fecha_cpb show_label=False %}</div>
+								     </div>									   								     
+									
+								  	<div class="row">						        
+								        <label class="control-label col-sm-3 col-xs-3">Número:</label>	
+										<div class="col-xs-4 col-sm-2">{% bootstrap_field form.pto_vta show_label=False %}</div>
+										<div class="col-xs-2 col-sm-2">{% bootstrap_field form.letra show_label=False %}</div>	
+										<div class="col-xs-3 col-sm-3">{% bootstrap_field form.numero show_label=False %}</div>
+									   
+									</div>										
+
 								</div>
 							</div>
 							
@@ -60,12 +72,13 @@
 						                <table id="id_forms_table" width="100%" class="table tabla table-condensed tabla_listado">
 						                    <thead>
 						                          <tr>
-						                              <th style="width: 30%;">Producto/Servicio <div class="btn-group botonera"> 
+						                              <th style="width: 40%;">Producto/Servicio 
 									                    	<a id="recargarProductos" href="#" class="recargarDatos" type="button" data-toggle="tooltip" data-placement="top" 
 									                    	title="Recargar listados de Productos"><i class="fa fa-refresh"></i></a>
-									                    </div></th>						                          						
-						                              <th style="width: 20%;">Detalle</th>
-						                              <th style="width: 55px;">Cantidad</th>						                             
+									                  </th>						                          						
+						                              <th style="width: 10%;">Cantidad</th>
+						                              <th style="width: 5%;"></th>
+						                              <th style="width: 50%;">Detalle</th>						                             
 						                              <th style="width: 10px;" class="remove-sorting"></th>
 						                          </tr>
 						                    </thead>					                    
@@ -73,12 +86,12 @@
 						                    	{{ remito_detalle.management_form }}
 						                    	{{ remito_detalle.non_form_errors  }}
 						                    	{% for form2 in remito_detalle.forms %}					                      								                      	
-							                      	{{ form2.non_field_errors }}					                      								                      	
-							                      	{{form2.errors}}
+						                    	  	{{ form2.non_field_errors }}					                      								                      	
 							                      	<tr class="{{ remito_detalle.prefix }}">           					                      	
 								                      	<td>{% bootstrap_field form2.producto show_label=False%}</td>
-								                      	<td>{% bootstrap_field form2.detalle show_label=False%}</td>
-								                      	<td>{% bootstrap_field form2.cantidad show_label=False%}</td>								                      	
+								                      	<td>{% bootstrap_field form2.cantidad show_label=False%}</td>
+								                      	<td class="unidades">{% bootstrap_field form2.unidad show_label=False%}</td>
+								                      	<td>{% bootstrap_field form2.detalle show_label=False%}</td>								                      	
 								                      	<td>{{form2.DELETE}}
 								                      	 <a class="btn btn-danger delete-row1" title="Eliminar">
 								                      			<i class="fa fa-times" aria-hidden="true"></i></a>		 
@@ -90,7 +103,7 @@
 						                </table>                        
 						         </div>                						         
 						     </div>
-					     						     
+					     	<br>					     
 					         <div class="col-xs-12"> 
 					             		{% bootstrap_field form.observacion show_label=False%}					         					         								
 					         </div>
@@ -105,7 +118,7 @@
 	                    
 	                    <div class="row">
 		                    <div class="col-xs-12">                                                        
-		                     <a href="{% url 'cpb_remito_listado' %}" class="btn pull-left btn red-flamingo"><i class="fa fa-times"></i> Cancelar </a>
+		                     <a href="{% url 'cpb_remitoc_listado' %}" class="btn pull-left btn red-flamingo"><i class="fa fa-times"></i> Cancelar </a>
 		                     <button id="GuardarRemito" type="submit" class="btn pull-right blue"> Guardar </button>
 
 		                    </div>
