--- a/templates/productos/producto_form.html
+++ b/templates/productos/producto_form.html
@@ -61,7 +61,7 @@
 										                	<div class="col-sm-8">{% bootstrap_field form.ubicacion %}</div>
 													       	<div class="col-sm-4">{% bootstrap_field form.stock %}</div>
 											                {% else %}
-											                <div class="col-sm-12"><h4>El Stock ya está inicializado</h4></div>
+											                <div class="col-sm-12"><h4 class="text-center">EL STOCK YA FUÉ INICIALIZADO</h4></div>
 											                {% endif %}		
 													     </div>
 
