--- a/templates/egresos/compras/cpb_compra_form.html
+++ b/templates/egresos/compras/cpb_compra_form.html
@@ -9,11 +9,11 @@
  	<link rel="stylesheet" href="{% static 'css/comprobantes.css'%}?{% now "Ymd"%}" type="text/css" >  
 {% endblock %}
 {% block extra_js %}        
-    <script src="{% static 'js/jquery.formset.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/scripts/scripts_cpb_compra.js'%}?{% now "Ymd"%}" type="text/javascript"></script>
-    {% block modales_js %} 
-    {% endblock %}
+{% endblock %}
 
+{% block extra_js_final %}        
+    <script src="{% static 'js/jquery.formset.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/scripts/scripts_cpb_compra.js'%}?{% now "Ymd"%}" type="text/javascript"></script>    
 {% endblock %}
 
 
@@ -40,10 +40,11 @@
 										<div class="col-sm-9 col-xs-9">
 											{% bootstrap_field form.entidad show_label=False  %}												
 										</div>						
-										<div class="col-sm-1 col-xs-1 hidden-xs">
-						                  <a id="recargarProveedores" href="#" class="recargarDatos" type="button" data-toggle="tooltip" data-placement="top" title="Recargar Proveedores">
-											<i class="fa fa-refresh"></i></a>
-						                </div>      										
+										{% if not sitio_mobile %}
+												<div class="col-sm-1 col-xs-1">
+								                  <a id="nuevoProveedor" href="{% url 'proveedor_nuevo' %}" data-fm-head="AGREGAR PROVEEDOR" class="recargarDatos fm-create" type="button" data-toggle="tooltip" data-fm-callback="recargarP" data-placement="top" title="Agregar Proveedor"><i class="icon-users"></i></a>
+								                </div>       				
+						                {% endif %}      										
 								  </div>								  
 								  <div class="row">
 										<label class="control-label col-sm-2 col-xs-3" for="id_fecha_cpb">Tipo CPB:</label>
