--- a/templates/ingresos/liqprod/cpb_liqprod_form.html
+++ b/templates/ingresos/liqprod/cpb_liqprod_form.html
@@ -8,11 +8,13 @@
 {% block extra_css %}
  	<link rel="stylesheet" href="{% static 'css/comprobantes.css'%}?{% now "Ymd"%}" type="text/css" >  
 {% endblock %}
+
 {% block extra_js %}        
+{% endblock %}
+
+{% block extra_js_final %}        
     <script src="{% static 'js/jquery.formset.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/scripts/scripts_cpb_liqprod.js'%}?{% now "Ymd"%}" type="text/javascript"></script>
-    {% block modales_js %} 
-    {% endblock %}
+    <script src="{% static 'js/scripts/scripts_cpb_liqprod.js'%}?{% now "Ymd"%}" type="text/javascript"></script>    
 {% endblock %}
 
 {% block main %}
@@ -39,8 +41,7 @@
 										</div>						
 										{% if not sitio_mobile %}
 										<div class="col-sm-1 col-xs-1">
-						                  <a id="recargarProveedores" href="#" class="recargarDatos" type="button" data-toggle="tooltip" data-placement="top" title="Recargar">
-											<i class="fa fa-refresh"></i></a>
+						                  <a id="nuevoProveedor" href="{% url 'proveedor_nuevo' %}" data-fm-head="AGREGAR PROVEEDOR" class="recargarDatos fm-create" type="button" data-toggle="tooltip" data-fm-callback="recargarP" data-placement="top" title="Agregar Proveedor"><i class="icon-users"></i></a>
 						                </div>        				
 						                {% endif %}
 								  </div>								  
