--- a/templates/ingresos/ventas/cpb_venta_form.html
+++ b/templates/ingresos/ventas/cpb_venta_form.html
@@ -8,11 +8,12 @@
 {% block extra_css %}
  	<link rel="stylesheet" href="{% static 'css/comprobantes.css'%}?{% now "Ymd"%}" type="text/css" >  
 {% endblock %}
+
 {% block extra_js %}        
+{% endblock %}
+{% block extra_js_final %}        
     <script src="{% static 'js/jquery.formset.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/scripts/scripts_cpb_venta.js'%}?{% now "Ymd"%}" type="text/javascript"></script>
-    {% block modales_js %} 
-    {% endblock %}
+    <script src="{% static 'js/scripts/scripts_cpb_venta.js'%}?{% now "Ymd"%}" type="text/javascript"></script>    
 {% endblock %}
 
 {% block main %}
@@ -38,11 +39,8 @@
 											{% bootstrap_field form.entidad show_label=False  %}												
 										</div>						
 										{% if not sitio_mobile %}
-												<div class="col-sm-1 col-xs-1 hidden-xs">						                  
-													<div class="btn-group"> 
-									                  		<a id="nuevoClientes" href="{% url 'cliente_nuevo' %}" data-fm-head="AGREGAR CLIENTE" class="recargarDatos fm-create" type="button" data-toggle="tooltip" data-fm-callback="recargarC" data-placement="top" title="Agregar Cliente"><i class="fa fa-plus"></i></a>
-									                  		<a id="recargarClientes" href="#" class="recargarDatos" type="button" data-toggle="tooltip" data-placement="top" title="Recargar Clientes"><i class="fa fa-refresh"></i></a>
-													</div>
+												<div class="col-sm-1 hidden-xs">						                  
+									                  		<a id="nuevoClientes" href="{% url 'cliente_nuevo' %}" data-fm-head="AGREGAR CLIENTE" class="recargarDatos fm-create" type="button" data-toggle="tooltip" data-fm-callback="recargarC" data-placement="top" title="Agregar Cliente"><i class="icon-users"></i></a>
 								                </div>        				
 						                {% endif %}
 								  </div>
@@ -51,8 +49,7 @@
 										<div class="col-sm-9 col-xs-9">{% bootstrap_field form.vendedor show_label=False %}</div>										
 										
 										<div class="col-sm-1 col-xs-1 hidden-xs">
-						                  <a id="recargarVendedores" href="#" class="recargarDatos" type="button" data-toggle="tooltip" data-placement="top" title="Recargar Vendedores">
-											<i class="fa fa-refresh"></i></a>
+						                  	<a id="nuevoVendedor" href="{% url 'vendedor_nuevo' %}" data-fm-callback="recargarV" data-fm-head="AGREGAR VENDEDOR" class="recargarDatos fm-create" type="button" data-toggle="tooltip" data-placement="top" title="Agregar Vendedor"><i class="icon-users"></i></a>
 						                </div> 
 						                 
 								  </div>
