--- a/templates/usuarios/usuario_form.html
+++ b/templates/usuarios/usuario_form.html
@@ -43,7 +43,7 @@
 										                <div class="row cerca">
 													       	<div class="col-sm-3">{% bootstrap_field form.nombre %}</div>
 															<div class="col-sm-3">{% bootstrap_field form.usuario %}</div>																	
-															<div class="col-sm-3">{% bootstrap_field form.grupo %}</div>												
+															<div class="col-sm-3 pull-right">{% bootstrap_field form.grupo %}</div>												
 													     </div>
 										               </div>                                       						         
 										       		</fieldset>										       	
@@ -54,8 +54,8 @@
 							          		<fieldset>
 									       		<legend>PERMISOS DE USUARIO</legend>								
 									       		<div class="col-sm-12">
-									                <div class="row cerca botonera">										                
-								                	<input type="checkbox" id="checkall" title="Seleccionar Todas"/>SELECCIONAR TODOS/NINGUNO</a>
+									                <div class="row botonera">										                
+								                	<label for="checkall"><input type="checkbox" id="checkall" title="Seleccionar Todas"/><strong> SELECCIONAR TODOS/NINGUNO</strong></label>
 									                </div>
 									                <div class="row cerca">
 							                                {{form.permisos}}
