--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
 			</div>
 			
 			<div class="form-actions">
-				<input type="submit" name="login"/ class="btn grey-gallery uppercase" value="Ingresar">				
+				<input type="submit" name="login" class="btn grey-gallery uppercase" value="Ingresar">				
 			</div>		
 
 		</form>
