--- a/templates/usuarios/usuario_form.html
+++ b/templates/usuarios/usuario_form.html
@@ -55,7 +55,10 @@
 									       		<legend>PERMISOS DE USUARIO</legend>								
 									       		<div class="col-sm-12">
 									                <div class="row cerca botonera">										                
-								                	<input type="checkbox" id="checkall" title="Seleccionar Todas"/>SELECCIONAR TODOS/NINGUNO</a>
+								                		<label for="id_permisos_1_0">
+								                			<input id="checkall" name="checkall" type="checkbox" title="Seleccionar Todas"/> SELECCIONAR TODOS/NINGUNO
+								                		</label>
+								                	
 									                </div>
 									                <div class="row cerca">
 							                                {{form.permisos}}
