--- a/templates/usuarios/usuario_form.html
+++ b/templates/usuarios/usuario_form.html
@@ -54,7 +54,7 @@
 									       		<legend>PERMISOS DE USUARIO</legend>								
 									       		<div class="col-sm-12">
 									                <div class="row cerca botonera">										                
-								                		<label for="id_permisos_1_0">
+								                		<label for="checkall">
 								                			<input id="checkall" name="checkall" type="checkbox" title="Seleccionar Todas"/> SELECCIONAR TODOS/NINGUNO
 								                		</label>
 								                	
