--- a/templates/productos/producto_stock.html
+++ b/templates/productos/producto_stock.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div class="btn-group " style="float:left;margin-right:20px;margin-bottom:10px;"> 
-        <button class="btn btn-sm green-meadow fm-create" style="float:left;margin-right:20px;" href="{% url 'prod_stock_nuevo' %}" data-fm-head="AGREGAR PRODUCTO/STOCK" data-fm-callback="reload">Nuevo Stock</button>    
+        <button id="btnNuevo" class="btn btn-sm green-meadow" style="float:left;margin-right:20px;">Nuevo Stock</button>    
         <button class="btn btn-sm green-meadow" value="" style="margin-right:20px;" id="btnActualizar">Actualizar Stock</button>    
     </div>               
 
