--- a/templates/general/pto_vta/pto_vta_form.html
+++ b/templates/general/pto_vta/pto_vta_form.html
@@ -37,6 +37,11 @@
 										       		<fieldset>
 										       		<legend>DATOS GENERALES</legend>												      
 												    <div class="col-xs-12">
+										                <div class="row">
+												         	<div class="btn-group " style="float:left;margin-right:20px;margin-bottom:10px;">
+							                                	<button class="btn btn-xs color_barra" value="" id="copiarEmpresa">Copiar Datos Empresa</button>
+						                                  	</div>			    							                                  
+							                            </div>
 										                <div class="row cerca">
 													       	{% if not nro %}<div class="col-sm-1">{% bootstrap_field form.numero %}</div>{% endif %}
 													       	<div class="col-sm-3">{% bootstrap_field form.cuit %}</div>
