--- a/templates/general/empresas/empresa_form.html
+++ b/templates/general/empresas/empresa_form.html
@@ -143,7 +143,11 @@
 														<div class="row cerca">
 															<label class="control-label col-sm-6">Tipo Logo en Factura:</label>
 															<div class="col-sm-6">{% bootstrap_field form.tipo_logo_factura show_label=False  %}</div>		
-														</div>														
+														</div>
+														<div class="row cerca">
+																<label class="control-label col-sm-6">Ruta Logo en Factura:</label>
+																<div class="col-sm-6">{% bootstrap_field form.ruta_logo show_label=False  %}</div>		
+														</div>															
 													
 									       		   	
 									       		   </div>
