--- a/templates/general/pto_vta/pto_vta_form.html
+++ b/templates/general/pto_vta/pto_vta_form.html
@@ -39,7 +39,7 @@
 												    <div class="col-xs-12">
 										                <div class="row">
 												         	<div class="btn-group " style="float:left;margin-right:20px;margin-bottom:10px;">
-							                                	<button class="btn btn-xs color_barra" value="" id="copiarEmpresa">Copiar Datos Empresa</button>
+							                                	<a class="btn btn-xs color_barra" value="" id="copiarEmpresa">Copiar Datos Empresa</a>
 						                                  	</div>			    							                                  
 							                            </div>
 										                <div class="row cerca">
@@ -94,6 +94,10 @@
 																<label class="control-label col-sm-6">Tipo Logo en Factura:</label>
 																<div class="col-sm-6">{% bootstrap_field form.tipo_logo_factura show_label=False  %}</div>		
 														</div>																	
+														<div class="row cerca">
+																<label class="control-label col-sm-6">Ruta Logo en Factura:</label>
+																<div class="col-sm-6">{% bootstrap_field form.ruta_logo show_label=False  %}</div>		
+														</div>	
 
 													</div>
 												</fieldset>		
