--- a/templates/productos/producto_form.html
+++ b/templates/productos/producto_form.html
@@ -79,6 +79,8 @@
 												                              <th style="width: 20%;" title="Precio de Costo con Impuestos" >Costo c/Imp.</th>						
 												                              <th style="width: 5%;" title="Coeficiente de Ganancia (1=100%)" >Coef.Gan.</th>						
 												                              <th style="width: 20%;" title="Precio de Venta (Costo c/Imp * Coef.Gan.)" >Venta</th>
+												                              <th style="width: 20%;" title="Valor ITC" >ITC</th>
+												                              <th style="width: 20%;" title="Valor Tasa" >Tasa</th>
 												                              <th class="remove-sorting"></th>
 												                          </tr>
 												                    </thead>					                    
@@ -93,6 +95,8 @@
 														                      	<td>{% bootstrap_field l.precio_cimp show_label=False%}</td>
 														                      	<td>{% bootstrap_field l.coef_ganancia show_label=False%}</td>	
 														                      	<td>{% bootstrap_field l.precio_venta show_label=False%}</td>
+														                      	<td>{% bootstrap_field l.precio_itc show_label=False%}</td>	
+														                      	<td>{% bootstrap_field l.precio_tasa show_label=False%}</td>
 														                      	<td>{{l.DELETE}}
 														                      	 <a class="btn btn-danger delete-row2" title="Eliminar">
 														                      			<i class="fa fa-times" aria-hidden="true"></i></a>		 
